tests/errors/E034.zen
bool main() {
    let message := "Hello, " + "World !";
    return 1 && 2;
}